--- a/styles.css
+++ b/styles.css
@@ -27,7 +27,7 @@ body {
   height: auto;
 }
 
-.matchup .computer {
+.matchup .computer-img {
   transform: scaleX(-1);
 }
 
@@ -56,3 +56,33 @@ button:active {
   width: 100px;
   height: 100px;
 }
+
+.player-side,
+.computer-side {
+ display: flex;
+ gap: 1rem;
+}
+
+ .player-score,
+ .computer-score,
+ .move-history,
+ .output {
+  text-align: center;
+ }
+
+ .move-history,
+ .output {
+  border: 5px solid #eee;
+  border-radius: 20px;
+ }
+
+ .move-history {
+  width: 150px;
+  text-transform: uppercase;
+  line-height: 1.5;
+ }
+
+ .output {
+  height: 250px;
+  margin: 25px;
+ }
