--- a/styles.css
+++ b/styles.css
@@ -11,6 +11,7 @@ body {
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  background-image: url(imgs/background.jpg);
 }
 
 .container {
