--- a/styles.css
+++ b/styles.css
@@ -11,7 +11,7 @@ body {
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  background-image: url(imgs/background.jpg);
+  background-image: url(imgs/background.png);
 }
 
 .container {
